syntax = "proto3";
package compute;

option go_package = "/proto";

// Apply for / check authority / Deploy
message GreetFromClient {
    int32 msg_type = 1;
    string input = 2;
    map<string, string> opts = 3;
}

message GreetFromServer {
    string result = 1;
}

// Process (Compute)
message Request {
    string api_key = 1;
    string address = 2;
    bytes request = 3;
}

message Response {
    bytes response = 1;
}

service ComputeService {
    rpc Greet(GreetFromClient) returns (GreetFromServer);
    rpc Process(Request) returns (Response);
}
